# SBM_wholeblood_EVdecoration

./: .gitignore  LICENSE  README.md  requirements.txt
.ipynb_checkpoints/: CMakeLists-checkpoint.txt
data/: config.json
includes/: macros.h
includes/model/: PI_SBM_Solver.h
includes/utils/: io_utils.h  misc.h
notebooks/: pyabc_sbm.ipynb  vis_pyabc_sbm.ipynb
notebooks/.ipynb_checkpoints/: pyabc_sbm-checkpoint.ipynb  vis_pyabc_sbm-checkpoint.ipynb
notebooks/abc_data/: PYABC_sbm.nc
src/: CMakeLists.txt  main.cpp  python_API.cpp
src/model/: CMakeLists.txt  Makefile  PI_SBM_Solver.cpp  cmake_install.cmake
src/utils/: CMakeLists.txt  Makefile  cmake_install.cmake  io_utils.cpp
